--- a/Portal_del_Vecino/public_html/index.html
+++ b/Portal_del_Vecino/public_html/index.html
@@ -1,16 +1,117 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>Hola Mundo</div>
-    </body>
+<head>
+	<title>Portal del Vecino</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
+</head>
+<body>
+<div class="container">
+	<div class="jumbotron">
+		<div class="row">
+			<div class="col-sm-2">
+	    		<img class="img-responsive" src="home.jpg" width="130" height="130">
+	    	</div>
+	    	<form>
+	    	<br><div class="row">
+			    	<div class="col-sm-3 col-sm-push-2">
+			    		<label for="usr"><span class="fa fa-user-circle-o"></span> Usuario:</label>
+			    		<input type="text" class="form-control" id="usr" placeholder="Correo" autofocus>
+			    	</div>
+			    	<div class="col-sm-3 col-sm-push-2">
+			    		<label for="pas"><span class="fa fa-lock"></span> Contraseña:</label>
+			    		<input type="password" class="form-control" id="pas" placeholder="Contraseña">
+			    	</div>
+			    	<div class="col-sm-3 col-sm-push-2">
+			    		<br><a type="button" class="btn btn-primary btn-md ingreso" href="home.html" rel>Ingresar <span class="fa fa-sign-in"></span></a>
+			    	</div>
+			    	<div class="col-sm-3 col-sm-push-7">
+			    		<br><a href="#">¿Olvido su Contraseña <span class="fa fa-unlock-alt"></span> ?</a>
+			    	</div>
+			    </div>
+	    	</form>
+	    </div>
+	</div>
+
+	<div class="page-header">
+  		<h1>Registro de Usuario</h1>
+	</div>
+
+	<form>
+		<div class="row">
+			<div class="col-sm-3 col-sm-push-3">
+	    		<label for="usrr">Nombre:</label>
+	    		<input type="text" class="form-control" id="usrr" placeholder="Nombre">
+	    	</div>
+	    	<div class="col-sm-3 col-sm-push-3">
+	    		<label for="pass">Contraseña:</label>
+	    		<input type="password" class="form-control" id="pass" placeholder="Contraseña">
+	    	</div>
+		</div><br><br>
+		<div class="row">
+			<div class="col-sm-3 col-sm-push-3">
+	    		<label for="com">Comuna:</label>
+	    		<input type="text" class="form-control" id="com" placeholder="Comuna">
+	    	</div>
+	    	<div class="col-sm-3 col-sm-push-3">
+	    		<label for="dir">Dirección:</label>
+	    		<input type="tex" class="form-control" id="dir" placeholder="Dirección">
+	    	</div>
+		</div><br><br>
+		<div class="row">
+			<div class="col-sm-3 col-sm-push-3">
+	    		<label for="cor">Correo:</label>
+	    		<input type="email" class="form-control" id="cor" placeholder="Correo">
+	    	</div>
+	    	<div class="col-sm-3 col-sm-push-3">
+	    		<label for="tel">Teléfono:</label>
+	    		<input type="text" class="form-control" id="tel" placeholder="Teléfono">
+	    	</div>
+		</div><br>
+		<div class="row">
+			<div class="col-sm-2 col-sm-push-5">
+				<div class="row">
+					<div class="col-sm-2 col-sm-push-2">
+		    			<br><a type="button" class="btn btn-success btn-md" href="home.html" rel>Registrarse <span class="fa fa-check"></span></a><br><br>
+		    		</div>
+		    	</div>
+	    	</div>
+		</div>
+	</form>
+
+	<footer>
+		    <div class="footer jumbotron">
+		        <div class="container-fluid">
+		            <div class="row">
+		                <div class="col-sm-4">
+		                    <h3> Horarios  <i class="fa fa-clock-o"></i></h3>
+		                    <ul>
+		                        <li> Lunes a Viernes: 14:00 - 00:00</li>
+		                        <li> Sábado y Domingo: 16:00 - 22:00 </li>
+		                    </ul>
+		                </div>
+		                <div class="col-sm-4">
+		                    <h3> Contacto </h3>
+		                    <ul>
+		                        <li> <i class="fa fa-map-marker"></i> Dirección: Rudecindo Ortega 2950, Temuco</li>
+		                        <li> <i class="fa fa-phone"></i> Telefono: +56 45 255 3978</li>
+		                        <li> <i class="fa fa-envelope"></i> e-mail: uct@uct.cl</li>
+		                    </ul>
+		                </div>
+		                <div class="col-sm-4">
+		                    <h3> Redes sociales </h3>
+		                    <ul class="social">
+		                        <li> <a href="https://www.facebook.com/canaluctemuco/"> <i class=" fa fa-facebook"></i> </a> </li>
+		                        <li> <a href="https://twitter.com/uc_temuco?"> <i class="fa fa-twitter">   </i> </a> </li>
+		                    </ul>
+		                </div>
+		            </div>
+		        </div>
+		    </div>
+		</footer>
+
+</div>
+</body>
 </html>
