--- a/Portal_del_Vecino/public_html/tesoreria_add_balances.html
+++ b/Portal_del_Vecino/public_html/tesoreria_add_balances.html
@@ -74,7 +74,7 @@
 	        <li class="dropdown active">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tesorería <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="#">Ver Balances</a></li>
+	            <li><a href="tesoreria_balances.html">Ver Balances</a></li>
 	            <li><a href="tesoreria_recursos.html">Solicitar Recursos</a></li>
 	            <li class="active"><a href="#">Añadir balances (*)</a></li>
 	            <li><a href="tesoreria_admin_recursos.html">Administrar Recursos (*)</a></li>
