Modificación de links

--- a/Portal_del_Vecino/public_html/home.html
+++ b/Portal_del_Vecino/public_html/home.html
@@ -51,25 +51,26 @@
 	        <li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tesorería <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="#">Ver Balances</a></li>
-	            <li><a href="#">Solicitar Recursos</a></li>
-	            <li><a href="#">Añadir balances (*)</a></li>
-	            <li><a href="#">Administrar Recursos (*)</a></li>
+	            <li><a href="tesoreria_balances.html">Ver Balances</a></li>
+	            <li><a href="tesoreria_recursos.html">Solicitar Recursos</a></li>
+	            <li><a href="tesoreria_add_balances.html">Añadir balances (*)</a></li>
+	            <li><a href="tesoreria_admin_recursos.html">Administrar Recursos (*)</a></li>
 	          </ul>
 	        </li>
 	        <li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Actividades <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="#">Reuniones</a></li>
-	            <li><a href="#">Historial de Actividades</a></li>
-	            <li><a href="#">Añadir Reuniones (*)</a></li>
+	            <li><a href="actividades_reuniones.html">Reuniones</a></li>
+	            <li><a href="actividades_historial.html">Historial de Actividades</a></li>
+	            <li><a href="actividades_add_reuniones.html">Añadir Reuniones (*)</a></li>
+	            <li><a href="actividades_add_actividades.html">Añadir Actividades (*)</a></li>
 	          </ul>
 	        </li>
 	        <li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proyectos <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="#">Proyectos</a></li>
-	            <li><a href="#">Añadir Proyectos (*)</a></li>
+	            <li><a href="proyectos_proyecto.html">Proyectos</a></li>
+	            <li><a href="proyecyos_add_proyectos.html">Añadir Proyectos (*)</a></li>
 	          </ul>
 	        </li>
 	        <li><a href="#">Foro</a></li>
@@ -86,18 +87,11 @@
 
 	    <div class="carousel-inner">
 	        <div class="item active asd">
-	       	    <img src="emputado.jpg" alt="Emputadito :'v">
-	   		</div>
-		    <div class="item asd">
-		        <img src="pikachu.jpg" alt="Emputadote :vv">
-		    </div>
-		    <div class="item asd">
-		       <img src="pikucha.jpg" alt="Emputadisisisisisimo :v">
-		    </div>
+
 		    <br><br><br><br><br><br><br><br>
 		    <div class="carousel-caption">
-			    <h3>Emputaditos</h3>
-			    <p>Me emperra todo</p>
+			    <h3>Carrusel</h3>
+			    <p>Fotos de noticias</p>
 		    </div>
 	  	</div>
 
