--- a/Portal_del_Vecino/public_html/home.html
+++ b/Portal_del_Vecino/public_html/home.html
@@ -86,18 +86,18 @@
 
 	    <div class="carousel-inner">
 	        <div class="item active asd">
-	       	    <img src="emputado.jpg" alt="Emputadito :'v">
+	       	    <img src="#" alt="">
 	   		</div>
 		    <div class="item asd">
-		        <img src="pikachu.jpg" alt="Emputadote :vv">
+		        <img src="#" alt="">
 		    </div>
 		    <div class="item asd">
-		       <img src="pikucha.jpg" alt="Emputadisisisisisimo :v">
+		       <img src="#" alt="">
 		    </div>
 		    <br><br><br><br><br><br><br><br>
 		    <div class="carousel-caption">
-			    <h3>Emputaditos</h3>
-			    <p>Me emperra todo</p>
+			    <h3>TITULO noticia</h3>
+			    <p>CUERPO noticia</p>
 		    </div>
 	  	</div>
 
