Orden de archivos y links para cada página

--- a/Portal_del_Vecino/public_html/index.html
+++ b/Portal_del_Vecino/public_html/index.html
@@ -12,7 +12,7 @@
 	<div class="jumbotron">
 		<div class="row">
 			<div class="col-sm-2">
-	    		<img class="img-responsive" src="home.jpg" width="130" height="130">
+	    		<img class="img-responsive" src="imagenes/home.jpg" width="130" height="130">
 	    	</div>
 	    	<form>
 	    	<br><div class="row">
@@ -25,7 +25,7 @@
 			    		<input type="password" class="form-control" id="pas" placeholder="Contraseña">
 			    	</div>
 			    	<div class="col-sm-3 col-sm-push-2">
-			    		<br><a type="button" class="btn btn-primary btn-md ingreso" href="home.html" rel>Ingresar <span class="fa fa-sign-in"></span></a>
+			    		<br><a type="button" class="btn btn-primary ingreso" href="home.html">Ingresar <span class="fa fa-sign-in"></span></a>
 			    	</div>
 			    	<div class="col-sm-3 col-sm-push-7">
 			    		<br><a href="#">¿Olvido su Contraseña <span class="fa fa-unlock-alt"></span> ?</a>
@@ -57,7 +57,7 @@
 	    	</div>
 	    	<div class="col-sm-3 col-sm-push-3">
 	    		<label for="dir">Dirección:</label>
-	    		<input type="tex" class="form-control" id="dir" placeholder="Dirección">
+	    		<input type="text" class="form-control" id="dir" placeholder="Dirección">
 	    	</div>
 		</div><br><br>
 		<div class="row">
@@ -74,7 +74,7 @@
 			<div class="col-sm-2 col-sm-push-5">
 				<div class="row">
 					<div class="col-sm-2 col-sm-push-2">
-		    			<br><a type="button" class="btn btn-success btn-md" href="home.html" rel>Registrarse <span class="fa fa-check"></span></a><br><br>
+		    			<br><a type="button" class="btn btn-success" href="home.html" rel>Registrarse <span class="fa fa-check"></span></a><br><br>
 		    		</div>
 		    	</div>
 	    	</div>
