--- a/Portal_del_Vecino/public_html/modulos/tesoreria/tesoreria_balances.html
+++ b/Portal_del_Vecino/public_html/modulos/tesoreria/tesoreria_balances.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Añadir Balances</title>
+	<title>Balances</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="../../css/bootstrap.css">
 	<link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -37,22 +37,22 @@
 	<div class="jumbotron">
 		<div class="row">
 			<div class="col-sm-2">
-	    		<img class="img-responsive" src="home.jpg" width="130" height="130">
+	    		<img class="img-responsive" src="../../imagenes/home.jpg" width="130" height="130">
 	    	</div>
 	    	<div class="col-sm-10">
 	    		<div class="row">
 			    	<div class="col-sm-3 col-sm-push-9">
-			    		<br><a type="button" class="btn btn-danger conf" href="index.html" rel>Cerrar sesión <span class="fa fa-sign-out"></span></a>
+			    		<br><a type="button" class="btn btn-danger conf" href="../../index.html" rel>Cerrar sesión <span class="fa fa-sign-out"></span></a>
 			    	</div>
 			    </div>
 			    <div class="row">
 			    	<div class="col-sm-3 col-sm-push-9">
-			    		<br><a type="button" class="btn btn-primary conf" href="home.html" rel>Configuración <span class="fa fa-cog"></span></a>
+			    		<br><a type="button" class="btn btn-primary conf" href="../../config.html" rel>Configuración <span class="fa fa-cog"></span></a>
 			    	</div>
 			    </div>
 			    <div class="row">
 			    	<div class="col-sm-3 col-sm-push-9">
-			    		<br><a type="button" class="btn btn-success conf" href="home.html" rel>Aceptar Miembros (*) <span class="fa fa-user-plus"></span></a>
+			    		<br><a type="button" class="btn btn-success conf" href="../../home.html" rel>Aceptar Miembros (*) <span class="fa fa-user-plus"></span></a>
 			    	</div>
 			    </div>
 			</div>
@@ -67,32 +67,33 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>                        
 	      </button>
-	      <a class="navbar-brand" href="home.html">Inicio</a>
+	      <a class="navbar-brand" href="../../home.html">Inicio</a>
 	    </div>
 	    <div class="collapse navbar-collapse" id="myNavbar">
 	      <ul class="nav navbar-nav">
 	        <li class="dropdown active">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tesorería <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="#">Ver Balances</a></li>
+	            <li class="active"><a href="tesoreria_balances.html">Ver Balances</a></li>
 	            <li><a href="tesoreria_recursos.html">Solicitar Recursos</a></li>
-	            <li class="active"><a href="#">Añadir balances (*)</a></li>
+	            <li><a href="tesoreria_add_balances.html">Añadir balances (*)</a></li>
 	            <li><a href="tesoreria_admin_recursos.html">Administrar Recursos (*)</a></li>
 	          </ul>
 	        </li>
 	        <li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Actividades <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="#">Reuniones</a></li>
-	            <li><a href="#">Historial de Actividades</a></li>
-	            <li><a href="#">Añadir Reuniones (*)</a></li>
+	            <li><a href="../actividades/actividades_reuniones.html">Reuniones</a></li>
+	            <li><a href="../actividades/actividades_historial.html">Historial de Actividades</a></li>
+	            <li><a href="../actividades/actividades_add_reuniones.html">Añadir Reuniones (*)</a></li>
+                    <li><a href="../actividades/actividades_add_actividades.html">Añadir Actividades (*)</a></li>
 	          </ul>
 	        </li>
 	        <li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proyectos <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="#">Proyectos</a></li>
-	            <li><a href="#">Añadir Proyectos (*)</a></li>
+	            <li><a href="../proyectos/proyectos_proyecto.html">Proyectos</a></li>
+	            <li><a href="../proyectos/proyectos_add_proyectos.html">Añadir Proyectos (*)</a></li>
 	          </ul>
 	        </li>
 	        <li><a href="#">Foro</a></li>
@@ -101,7 +102,7 @@
 	</nav>
 
 	<div class="page-header">
-  		<h1>Añadir</h1>
+  		<h1>Balances</h1>
 	</div>
 
 	<div class="table-responsive">
