--- a/Portal_del_Vecino/public_html/modulos/actividades/actividades_add_actividades.html
+++ b/Portal_del_Vecino/public_html/modulos/actividades/actividades_add_actividades.html
@@ -104,7 +104,7 @@
 					    		<textarea name="" class="form-control" id="desc" rows="5" placeholder="Descripcion"></textarea>
 					    	</div>
 							<div class="col-sm-3 col-sm-offset-5">
-					    		<br><a type="button" class="btn btn-primary btn-md" href="home.html">Guardar <span class="fa fa-save"></span></a>
+					    		<br><a type="button" class="btn btn-primary btn-md" href="../../home.html">Guardar <span class="fa fa-save"></span></a>
 					    	</div>
 		    			</div>
 					</div>
