Implementación diseño, foro parte 1 y avance foro parte 2 Junto a Matias Bahamonde y Mathias Muñoz

--- a/Portal_del_Vecino/public_html/home.html
+++ b/Portal_del_Vecino/public_html/home.html
@@ -73,7 +73,7 @@
 	            <li><a href="modulos/proyectos/proyectos_add_proyectos.html">Añadir Proyectos (*)</a></li>
 	          </ul>
 	        </li>
-	        <li><a href="#">Foro</a></li>
+	        <li><a href="modulos/foro/foro.html">Foro</a></li>
 	    </div>
 	  </div>
 	</nav>
@@ -103,40 +103,8 @@
 		    <span class="glyphicon glyphicon-chevron-right"></span>
 		    <span class="sr-only">Next</span>
 		</a>
-	</div>
-
-
-	<footer>
-	    <div class="footer jumbotron">
-	        <div class="container-fluid">
-	            <div class="row">
-	                <div class="col-sm-4">
-	                    <h3> Horarios  <i class="fa fa-clock-o"></i></h3>
-	                    <ul>
-	                        <li> Lunes a Viernes: 14:00 - 00:00</li>
-	                        <li> Sábado y Domingo: 16:00 - 22:00 </li>
-	                    </ul>
-	                </div>
-	                <div class="col-sm-4">
-	                    <h3> Contacto </h3>
-	                    <ul>
-	                        <li> <i class="fa fa-map-marker"></i> Dirección: Rudecindo Ortega 2950, Temuco</li>
-	                        <li> <i class="fa fa-phone"></i> Telefono: +56 45 255 3978</li>
-	                        <li> <i class="fa fa-envelope"></i> e-mail: uct@uct.cl</li>
-	                    </ul>
-	                </div>
-	                <div class="col-sm-4">
-	                    <h3> Redes sociales </h3>
-	                    <ul class="social">
-	                        <li> <a href="https://www.facebook.com/canaluctemuco/"> <i class=" fa fa-facebook"></i> </a> </li>
-	                        <li> <a href="https://twitter.com/uc_temuco?"> <i class="fa fa-twitter">   </i> </a> </li>
-	                    </ul>
-	                </div>
-	            </div>
-	        </div>
-	    </div>
-	</footer>
-
+            </div>
+        </div>
 </div>
 </body>
 </html>
