--- a/Portal_del_Vecino/public_html/modulos/tesoreria/tesoreria_recursos.html
+++ b/Portal_del_Vecino/public_html/modulos/tesoreria/tesoreria_recursos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+    <head>
 	<title>Solicitar recursos</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -31,112 +31,113 @@
 	} );
 	</script>
 	
-</head>
-<body>
-<div class="container">
-	<div class="jumbotron">
-		<div class="row">
-			<div class="col-sm-2">
-	    		<img class="img-responsive" src="../../imagenes/home.jpg" width="130" height="130">
-	    	</div>
-	    	<div class="col-sm-10">
-	    		<div class="row">
-			    	<div class="col-sm-3 col-sm-push-9">
-			    		<br><a type="button" class="btn btn-danger conf" href="../../index.php" rel>Cerrar sesión <span class="fa fa-sign-out"></span></a>
-			    	</div>
-			    </div>
-			    <div class="row">
-			    	<div class="col-sm-3 col-sm-push-9">
-			    		<br><a type="button" class="btn btn-primary conf" href="../../config.html" rel>Configuración <span class="fa fa-cog"></span></a>
-			    	</div>
-			    </div>
-			    <div class="row">
-			    	<div class="col-sm-3 col-sm-push-9">
-			    		<br><a type="button" class="btn btn-success conf" href="../../home.html" rel>Aceptar Miembros (*) <span class="fa fa-user-plus"></span></a>
-			    	</div>
-			    </div>
-			</div>
-	    </div>
-	</div>
+    </head>
+    <body>
+        <div class="container">
+            <div class="jumbotron">
+                <div class="row">
+                    <div class="col-sm-2">
+                    <img class="img-responsive" src="../../imagenes/home.jpg" width="130" height="130">
+                </div>
+                <div class="col-sm-10">
+                    <div class="row">
+                        <div class="col-sm-3 col-sm-push-9">
+                            <br><a type="button" class="btn btn-danger conf" href="../../index.php" rel>Cerrar sesión <span class="fa fa-sign-out"></span></a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-3 col-sm-push-9">
+                            <br><a type="button" class="btn btn-primary conf" href="../../config.html" rel>Configuración <span class="fa fa-cog"></span></a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-3 col-sm-push-9">
+                            <br><a type="button" class="btn btn-success conf" href="../../home.html" rel>Aceptar Miembros (*) <span class="fa fa-user-plus"></span></a>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
 
-  	<nav class="navbar navbar-default">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>                        
-	      </button>
-	      <a class="navbar-brand" href="../../home.html">Inicio</a>
-	    </div>
-	    <div class="collapse navbar-collapse" id="myNavbar">
-	      <ul class="nav navbar-nav">
-	        <li class="dropdown active">
-	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tesorería <span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="tesoreria_balances.html">Ver Balances</a></li>
-	            <li class="active"><a href="tesoreria_recursos.html">Solicitar Recursos</a></li>
-	            <li><a href="tesoreria_add_balances.html">Añadir balances (*)</a></li>
-	            <li><a href="tesoreria_admin_recursos.html">Administrar Recursos (*)</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Actividades <span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="../actividades/actividades_reuniones.html">Reuniones</a></li>
-	            <li><a href="../actividades/actividades_historial.html">Historial de Actividades</a></li>
-	            <li><a href="../actividades/actividades_add_reuniones.html">Añadir Reuniones (*)</a></li>
-                    <li><a href="../actividades/actividades_add_actividades.html">Añadir Actividades (*)</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proyectos <span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="../proyectos/proyectos_proyecto.html">Proyectos</a></li>
-	            <li><a href="../proyectos/proyectos_add_proyectos.html">Añadir Proyectos (*)</a></li>
-	          </ul>
-	        </li>
-	        <li><a href="#">Foro</a></li>
-	    </div>
-	  </div>
-	</nav>
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>                        
+                        </button>
+                        <a class="navbar-brand" href="../../home.html">Inicio</a>
+                    </div>
+                    <div class="collapse navbar-collapse" id="myNavbar">
+                        <ul class="nav navbar-nav">
+                            <li class="dropdown active">
+                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tesorería <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="tesoreria_balances.html">Ver Balances</a></li>
+                                    <li class="active"><a href="tesoreria_recursos.html">Solicitar Recursos</a></li>
+                                    <li><a href="tesoreria_add_balances.html">Añadir balances (*)</a></li>
+                                    <li><a href="tesoreria_admin_recursos.html">Administrar Recursos (*)</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Actividades <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="../actividades/actividades_reuniones.html">Reuniones</a></li>
+                                    <li><a href="../actividades/actividades_historial.html">Historial de Actividades</a></li>
+                                    <li><a href="../actividades/actividades_add_reuniones.html">Añadir Reuniones (*)</a></li>
+                                    <li><a href="../actividades/actividades_add_actividades.html">Añadir Actividades (*)</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proyectos <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="../proyectos/proyectos_proyecto.html">Proyectos</a></li>
+                                    <li><a href="../proyectos/proyectos_add_proyectos.html">Añadir Proyectos (*)</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Foro</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
 
-	<div class="page-header">
-  		<h1>Recursos</h1>
-	</div>
+            <div class="page-header">
+                <h1>Solicitar recursos</h1>
+            </div>
 
-	<div class="table-responsive">
-		<table id="example" class="table table-striped cell-border">
-		    <thead>
-		     	<tr>
-		        	<th>Firstname</th>
-		        	<th>Lastname</th>
-		        	<th>Email</th>
-		        	<th>Solicitar</th>
-		      	</tr>
-		    </thead>
-		    <tbody>
-		      	<tr>
-		        	<td>John</td>
-		       	 	<td>Doe</td>
-		        	<td>john@example.com</td>
-		        	<td><button class="btn btn-default">Solicitar</button></td>
-		      	</tr>
-		      	<tr>
-		        	<td>Mary</td>
-		        	<td>Moe</td>
-		        	<td>mary@example.com</td>
-		        	<td><button class="btn btn-default">Solicitar</button></td>
-		      	</tr>
-		      	<tr>
-		        	<td>July</td>
-		        	<td>Dooley</td>
-		        	<td>july@example.com</td>
-		        	<td><button class="btn btn-default">Solicitar</button></td>
-		      	</tr>
-		    </tbody>
-		</table>
-	</div>
-</div>
-</body>
+            <div class="table-responsive">
+                <table id="example" class="table table-striped cell-border">
+                    <thead>
+                        <tr>
+                            <th>Firstname</th>
+                            <th>Lastname</th>
+                            <th>Email</th>
+                            <th>Solicitar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>john@example.com</td>
+                            <td><button class="btn btn-default">Solicitar</button></td>
+                        </tr>
+                        <tr>
+                            <td>Mary</td>
+                            <td>Moe</td>
+                            <td>mary@example.com</td>
+                            <td><button class="btn btn-default">Solicitar</button></td>
+                        </tr>
+                        <tr>
+                            <td>July</td>
+                            <td>Dooley</td>
+                            <td>july@example.com</td>
+                            <td><button class="btn btn-default">Solicitar</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </body>
 </html>
