--- a/Portal_del_Vecino/public_html/modulos/tesoreria/tesoreria_balances.html
+++ b/Portal_del_Vecino/public_html/modulos/tesoreria/tesoreria_balances.html
@@ -7,10 +7,12 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="../../css/bootstrap.css">
 	<link rel="stylesheet" href="../../css/jquery.dataTables.min.css">
-	<script src="../../librerias/jquery-3.2.1.js"></script>s
+	<script src="../../librerias/jquery-3.2.1.js"></script>
 	<script src="../../librerias/bootstrap.js"></script>
 	<script src="../../librerias/jquery.dataTables.min.js"></script>
-	<script type="text/javascript" language="javascript" class="init">
+        
+        <!-- Configuración de lenguaje de DataTable -->
+	<script type="text/javascript">
 	$(document).ready(function() {
 		$('#example').DataTable( {
         "language": {
@@ -36,22 +38,22 @@
             <div class="jumbotron">
                 <div class="row">
                     <div class="col-sm-2">
-                    <img class="img-responsive" src="../../imagenes/home.jpg" width="130" height="130">
+                    <img class="img-responsive" src="../../imagenes/home.jpg" width="130" height="130" alt="Icono de pagina">
                 </div>
                 <div class="col-sm-10">
                     <div class="row">
                         <div class="col-sm-3 col-sm-push-9">
-                            <br><a type="button" class="btn btn-danger conf" href="../../index.php" rel>Cerrar sesión <span class="fa fa-sign-out"></span></a>
+                            <br><a class="btn btn-danger conf" href="../../index.php" rel>Cerrar sesión <span class="fa fa-sign-out"></span></a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-3 col-sm-push-9">
-                            <br><a type="button" class="btn btn-primary conf" href="../../config.html" rel>Configuración <span class="fa fa-cog"></span></a>
+                            <br><a class="btn btn-primary conf" href="../../config.html" rel>Configuración <span class="fa fa-cog"></span></a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-3 col-sm-push-9">
-                            <br><a type="button" class="btn btn-success conf" href="../../home.html" rel>Aceptar Miembros (*) <span class="fa fa-user-plus"></span></a>
+                            <br><a class="btn btn-success conf" href="../../home.html" rel>Aceptar Miembros (*) <span class="fa fa-user-plus"></span></a>
                         </div>
                     </div>
                 </div>
