--- a/Portal_del_Vecino/public_html/modulos/proyectos/proyectos_add_proyectos.html
+++ b/Portal_del_Vecino/public_html/modulos/proyectos/proyectos_add_proyectos.html
@@ -70,7 +70,7 @@
 	        <li class="dropdown active">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proyectos <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="proyectos_proyecto.html">Proyectos</a></li>
+	            <li><a href="proyectos_proyecto.php">Proyectos</a></li>
 	            <li class="active"><a href="proyectos_add_proyectos.html">Añadir Proyectos (*)</a></li>
 	          </ul>
 	        </li>
