mejora en algunos hrefs del nav, e implementacion de reuniones e historial del modulo actividades

--- a/Portal_del_Vecino/public_html/home.html
+++ b/Portal_del_Vecino/public_html/home.html
@@ -60,8 +60,8 @@
 	        <li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Actividades <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="modulos/actividades/actividades_reuniones.html">Reuniones</a></li>
-	            <li><a href="modulos/actividades/actividades_historial.html">Historial de Actividades</a></li>
+	            <li><a href="modulos/actividades/actividades_reuniones.php">Reuniones</a></li>
+	            <li><a href="modulos/actividades/actividades_historial.php">Historial de Actividades</a></li>
 	            <li><a href="modulos/actividades/actividades_add_reuniones.html">Añadir Reuniones (*)</a></li>
 	            <li><a href="modulos/actividades/actividades_add_actividades.html">Añadir Actividades (*)</a></li>
 	          </ul>
