--- a/Portal_del_Vecino/public_html/modulos/foro/foro.html
+++ b/Portal_del_Vecino/public_html/modulos/foro/foro.html
@@ -74,29 +74,29 @@
 	        <li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tesorería <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="modulos/tesoreria/tesoreria_balances.html">Ver Balances</a></li>
-	            <li><a href="modulos/tesoreria/tesoreria_recursos.html">Solicitar Recursos</a></li>
-	            <li><a href="modulos/tesoreria/tesoreria_add_balances.html">Añadir balances (*)</a></li>
-	            <li><a href="modulos/tesoreria/tesoreria_admin_recursos.html">Administrar Recursos (*)</a></li>
+	            <li><a href="../tesoreria/tesoreria_balances.html">Ver Balances</a></li>
+	            <li><a href="../tesoreria/tesoreria_recursos.html">Solicitar Recursos</a></li>
+	            <li><a href="../tesoreria/tesoreria_add_balances.html">Añadir balances (*)</a></li>
+	            <li><a href="../tesoreria/tesoreria_admin_recursos.html">Administrar Recursos (*)</a></li>
 	          </ul>
 	        </li>
 	        <li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Actividades <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="modulos/actividades/actividades_reuniones.html">Reuniones</a></li>
-	            <li><a href="modulos/actividades/actividades_historial.html">Historial de Actividades</a></li>
-	            <li><a href="modulos/actividades/actividades_add_reuniones.html">Añadir Reuniones (*)</a></li>
-	            <li><a href="modulos/actividades/actividades_add_actividades.html">Añadir Actividades (*)</a></li>
+	            <li><a href="../actividades/actividades_reuniones.php">Reuniones</a></li>
+	            <li><a href="../actividades/actividades_historial.php">Historial de Actividades</a></li>
+	            <li><a href="../actividades/actividades_add_reuniones.html">Añadir Reuniones (*)</a></li>
+	            <li><a href="../actividades/actividades_add_actividades.html">Añadir Actividades (*)</a></li>
 	          </ul>
 	        </li>
 	        <li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proyectos <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="modulos/proyectos/proyectos_proyecto.html">Proyectos</a></li>
-	            <li><a href="modulos/proyectos/proyectos_add_proyectos.html">Añadir Proyectos (*)</a></li>
+	            <li><a href="../proyectos/proyectos_proyecto.php">Proyectos</a></li>
+	            <li><a href="../proyectos/proyectos_add_proyectos.html">Añadir Proyectos (*)</a></li>
 	          </ul>
 	        </li>
-	        <li><a href="#">Foro</a></li> 
+	        <li class="active"><a href="#">Foro</a></li> 
                 </ul>
                 <li class="navbar-right">
                     <a type="button" class="btn btn-default conf" href="foro_new_discusion.html" rel><span class="fa fa-plus-circle"></span> Crear Discución</a>
