--- a/Portal_del_Vecino/public_html/modulos/foro/foro_new_discusion.html
+++ b/Portal_del_Vecino/public_html/modulos/foro/foro_new_discusion.html
@@ -83,8 +83,8 @@
 	        <li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Actividades <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="../actividades/actividades_reuniones.html">Reuniones</a></li>
-	            <li><a href="../actividades/actividades_historial.html">Historial de Actividades</a></li>
+	            <li><a href="../actividades/actividades_reuniones.php">Reuniones</a></li>
+	            <li><a href="../actividades/actividades_historial.php">Historial de Actividades</a></li>
 	            <li><a href="../actividades/actividades_add_reuniones.html">Añadir Reuniones (*)</a></li>
                     <li><a href="../actividades/actividades_add_actividades.html">Añadir Actividades (*)</a></li>
 	          </ul>
@@ -92,11 +92,11 @@
 	        <li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proyectos <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="../proyectos/proyectos_proyecto.html">Proyectos</a></li>
+	            <li><a href="../proyectos/proyectos_proyecto.php">Proyectos</a></li>
 	            <li><a href="../proyectos/proyectos_add_proyectos.html">Añadir Proyectos (*)</a></li>
 	          </ul>
 	        </li>
-	        <li class="active"><a href="#">Foro</a></li>
+	        <li class="active"><a href="foro.html">Foro</a></li>
 	    </div>
 	  </div>
 	</nav>
