--- a/Portal_del_Vecino/public_html/modulos/proyectos/proyectos_add_proyectos.html
+++ b/Portal_del_Vecino/public_html/modulos/proyectos/proyectos_add_proyectos.html
@@ -61,8 +61,8 @@
 	        <li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Actividades <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="../actividades/actividades_reuniones.html">Reuniones</a></li>
-	            <li><a href="../actividades/actividades_historial.html">Historial de Actividades</a></li>
+	            <li><a href="../actividades/actividades_reuniones.php">Reuniones</a></li>
+	            <li><a href="../actividades/actividades_historial.php">Historial de Actividades</a></li>
 	            <li><a href="../actividades/actividades_add_reuniones.html">Añadir Reuniones (*)</a></li>
                     <li><a href="../actividades/actividades_add_actividades.html">Añadir Actividades (*)</a></li>
 	          </ul>
@@ -74,7 +74,7 @@
 	            <li class="active"><a href="proyectos_add_proyectos.html">Añadir Proyectos (*)</a></li>
 	          </ul>
 	        </li>
-	        <li><a href="#">Foro</a></li>
+	        <li><a href="../foro/foro.html">Foro</a></li>
 	    </div>
 	  </div>
 	</nav>
