--- a/Portal_del_Vecino/public_html/modulos/tesoreria/tesoreria_add_balances.html
+++ b/Portal_del_Vecino/public_html/modulos/tesoreria/tesoreria_add_balances.html
@@ -59,8 +59,7 @@
                 </div>
                 </div>
             </div>
-
-<<<<<<< HEAD
+            
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
                     <div class="navbar-header">
@@ -85,8 +84,8 @@
                             <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Actividades <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="../actividades/actividades_reuniones.html">Reuniones</a></li>
-                                    <li><a href="../actividades/actividades_historial.html">Historial de Actividades</a></li>
+                                    <li><a href="../actividades/actividades_reuniones.php">Reuniones</a></li>
+                                    <li><a href="../actividades/actividades_historial.php">Historial de Actividades</a></li>
                                     <li><a href="../actividades/actividades_add_reuniones.html">Añadir Reuniones (*)</a></li>
                                     <li><a href="../actividades/actividades_add_actividades.html">Añadir Actividades (*)</a></li>
                                 </ul>
@@ -94,58 +93,15 @@
                             <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proyectos <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="../proyectos/proyectos_proyecto.html">Proyectos</a></li>
+                                    <li><a href="../proyectos/proyectos_proyecto.php">Proyectos</a></li>
                                     <li><a href="../proyectos/proyectos_add_proyectos.html">Añadir Proyectos (*)</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">Foro</a></li>
+                            <li><a href="../foro/foro.html">Foro</a></li>
                         </ul>
                     </div>
                 </div>
             </nav>
-=======
-  	<nav class="navbar navbar-default">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>                        
-	      </button>
-	      <a class="navbar-brand" href="../../home.html">Inicio</a>
-	    </div>
-	    <div class="collapse navbar-collapse" id="myNavbar">
-	      <ul class="nav navbar-nav">
-	        <li class="dropdown active">
-	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tesorería <span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="tesoreria_balances.html">Ver Balances</a></li>
-	            <li><a href="tesoreria_recursos.html">Solicitar Recursos</a></li>
-	            <li class="active"><a href="tesoreria_add_balances.html">Añadir balances (*)</a></li>
-	            <li><a href="tesoreria_admin_recursos.html">Administrar Recursos (*)</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Actividades <span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="../actividades/actividades_reuniones.html">Reuniones</a></li>
-	            <li><a href="../actividades/actividades_historial.html">Historial de Actividades</a></li>
-	            <li><a href="../actividades/actividades_add_reuniones.html">Añadir Reuniones (*)</a></li>
-                    <li><a href="../actividades/actividades_add_actividades.html">Añadir Actividades (*)</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proyectos <span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="../proyectos/proyectos_proyecto.php">Proyectos</a></li>
-	            <li><a href="../proyectos/proyectos_add_proyectos.html">Añadir Proyectos (*)</a></li>
-	          </ul>
-	        </li>
-	        <li><a href="#">Foro</a></li>
-	    </div>
-	  </div>
-	</nav>
->>>>>>> Desarrollo2_MMUNOZC
 
             <div class="page-header">
                 <h1>Añadir balances</h1>
