--- a/Portal_del_Vecino/public_html/modulos/foro/foro.html
+++ b/Portal_del_Vecino/public_html/modulos/foro/foro.html
@@ -105,36 +105,38 @@
 	  </div>
 	</nav>
     
-        <table id="temas" class="table table-bordered table-striped">
-            <thead>
-              <tr>
-                  <th>Tema</th>
-                  <th>Autor y fecha de creación</th>
-                  <th>Respuestas</th>
-                  <th>GO</th>
-              </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Iluminación cancha de futbol</td>
-                    <td>Lucian - 23/09/2017</td>
-                    <td>3</td>
-                    <td><a href="#"><span class="fa fa-sign-in"></span></a></td>
-                </tr>
-                <tr>
-                    <td>Instalación camaras de seguridad</td>
-                    <td>Moe zizlak - 24/09/2017</td>
-                    <td>8</td>
-                    <td><a href="#"><span class="fa fa-sign-in"></span></a></td>
-                </tr>
-                <tr>
-                    <td>Basureros en las esquinas</td>
-                    <td>Homer Simpsons - 26/09/2017</td>
-                    <td>1</td>
-                    <td><a href="#"><span class="fa fa-sign-in"></span></a></td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="table-responsive">
+            <table id="temas" class="table table-bordered table-striped">
+                <thead>
+                  <tr>
+                      <th>Tema</th>
+                      <th>Autor y fecha de creación</th>
+                      <th>Respuestas</th>
+                      <th>GO</th>
+                  </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Iluminación cancha de futbol</td>
+                        <td>Lucian - 23/09/2017</td>
+                        <td>3</td>
+                        <td><a href="#"><span class="fa fa-sign-in"></span></a></td>
+                    </tr>
+                    <tr>
+                        <td>Instalación camaras de seguridad</td>
+                        <td>Moe zizlak - 24/09/2017</td>
+                        <td>8</td>
+                        <td><a href="#"><span class="fa fa-sign-in"></span></a></td>
+                    </tr>
+                    <tr>
+                        <td>Basureros en las esquinas</td>
+                        <td>Homer Simpsons - 26/09/2017</td>
+                        <td>1</td>
+                        <td><a href="#"><span class="fa fa-sign-in"></span></a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 </div>
 </body>
 </html>
