--- a/Portal_del_Vecino/public_html/modulos/foro/foro_new_discusion.html
+++ b/Portal_del_Vecino/public_html/modulos/foro/foro_new_discusion.html
@@ -111,14 +111,14 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <label for="nombre">Titulo Discusión</label>
-                                    <input type="text" class="form-control" id="nombre" placeholder="Nombre">
-                                </div><br><br><br><br>
-                                    <div class="col-sm-12 ">
-                                    <label for="desc">Descripcion:</label>
-                                    <textarea name="" class="form-control" id="desc" rows="5" placeholder="Descripcion"></textarea>
+                                    <input type="text" class="form-control" id="nombre" placeholder="Nombre"><br>
                                 </div>
-                                <div class="col-sm-3 col-sm-offset-5">
-                                    <br><a type="button" class="btn btn-info btn-md" href="foro.html">Guardar <span class="fa fa-save"></span></a>
+                                <div class="col-sm-12 ">
+                                    <label for="desc">Descripcion:</label>
+                                    <textarea class="form-control" id="desc" rows="5" placeholder="Descripcion"></textarea>
+                                </div>
+                                <div class="col-sm-3 col-xs-offset-4 col-md-offset-5">
+                                    <br><a class="btn btn-info btn-md" href="foro.html">Guardar <span class="fa fa-save"></span></a>
                                 </div>
                             </div>
                         </div>
