Estandarizacion del codigo

--- a/Portal_del_Vecino/public_html/modulos/actividades/actividades_add_actividades.html
+++ b/Portal_del_Vecino/public_html/modulos/actividades/actividades_add_actividades.html
@@ -1,14 +1,14 @@
-<html>
+    <html>
 <head>
 	<title>Portal del Vecino</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="../../css/bootstrap.css">
-	<link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+	<link rel="stylesheet" href="../../css/font-awesome.min.css">
+        <link rel="stylesheet" href="../../css/bootstrap.css">
+        <link rel="stylesheet" href="../../css/jquery.dataTables.min.css">
+        <script src="../../librerias/jquery-3.2.1.js"></script>
+        <script src="../../librerias/bootstrap.js"></script>
+        <script src="../../librerias/jquery.dataTables.min.js"></script>
 </head>
 <body>
 <div class="container">
