--- a/Portal_del_Vecino/public_html/modulos/tesoreria/tesoreria_balances.html
+++ b/Portal_del_Vecino/public_html/modulos/tesoreria/tesoreria_balances.html
@@ -4,7 +4,7 @@
 	<title>Balances</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../../css/font-awesome.min.css">
 	<link rel="stylesheet" href="../../css/bootstrap.css">
 	<link rel="stylesheet" href="../../css/jquery.dataTables.min.css">
 	<script src="../../librerias/jquery-3.2.1.js"></script>
