Cambios pre-presentación

--- a/Portal_del_Vecino/public_html/home.html
+++ b/Portal_del_Vecino/public_html/home.html
@@ -96,6 +96,22 @@
                   <p>Cuerpo noticia</p>
                 </div>
               </div>
+            
+              <div class="item">
+                <img class="asd" src="imagenes/testimage.jpg" alt="Fiestas patrias">
+                <div class="carousel-caption">
+                  <h3>Titulo noticia</h3>
+                  <p>Cuerpo noticia</p>
+                </div>
+              </div>
+            
+              <div class="item">
+                <img class="asd" src="imagenes/testimage.jpg" alt="Fiestas patrias">
+                <div class="carousel-caption">
+                  <h3>Titulo noticia</h3>
+                  <p>Cuerpo noticia</p>
+                </div>
+              </div>
             </div>
 
             <!-- Left and right controls -->
