--- a/Portal_del_Vecino/public_html/config.html
+++ b/Portal_del_Vecino/public_html/config.html
@@ -13,7 +13,7 @@
 	<div class="jumbotron">
 		<div class="row">
 			<div class="col-sm-2">
-	    		<img class="img-responsive" src="home.jpg" width="130" height="130">
+	    		<img class="img-responsive" src="imagenes/home.jpg" width="130" height="130">
 	    	</div>
 	    	<div class="col-sm-10">
 	    		<div class="row">
