Acceso segú rol a balances, redireccionamiento a archivos php. Implementación función "Cerrar sesión" en tesoreria_balances.php

--- a/Portal_del_Vecino/public_html/home.html
+++ b/Portal_del_Vecino/public_html/home.html
@@ -52,10 +52,10 @@
 	        <li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tesorería <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="modulos/tesoreria/tesoreria_balances.html">Ver Balances</a></li>
-	            <li><a href="modulos/tesoreria/tesoreria_recursos.html">Solicitar Recursos</a></li>
-	            <li><a href="modulos/tesoreria/tesoreria_add_balances.html">Añadir balances (*)</a></li>
-	            <li><a href="modulos/tesoreria/tesoreria_admin_recursos.html">Administrar Recursos (*)</a></li>
+	            <li><a href="modulos/tesoreria/tesoreria_balances.php">Ver Balances</a></li>
+	            <li><a href="modulos/tesoreria/tesoreria_recursos.php">Solicitar Recursos</a></li>
+	            <li><a href="modulos/tesoreria/tesoreria_add_balances.php">Añadir balances (*)</a></li>
+	            <li><a href="modulos/tesoreria/tesoreria_admin_recursos.php">Administrar Recursos (*)</a></li>
 	          </ul>
 	        </li>
 	        <li class="dropdown">
